--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6ffe0">  <td>22/01/10 18:56:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestDeckBuild.build()[pri:0, instance:DeckBuildTest.TestDeckBuild@56c4278e]">&gt;&gt;build</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1703009290</td>   <td></td> </tr>
-<tr bgcolor="b6ffe0">  <td>22/01/10 18:56:51</td>   <td>44100</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestDeckBuild.tearDown()[pri:0, instance:DeckBuildTest.TestDeckBuild@56c4278e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1703009290</td>   <td></td> </tr>
+<tr bgcolor="b6ffe0">  <td>22/01/11 20:12:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestDeckBuild.setUp()[pri:0, instance:DeckBuildTest.TestDeckBuild@56c4278e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997702454</td>   <td></td> </tr>
+<tr bgcolor="b6ffe0">  <td>22/01/11 20:12:57</td>   <td>32062</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestDeckBuild.tearDown()[pri:0, instance:DeckBuildTest.TestDeckBuild@56c4278e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1997702454</td>   <td></td> </tr>
+<tr bgcolor="b6ffe0">  <td>22/01/11 20:12:32</td>   <td>6557</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestDeckBuild.test_1_Navegacion()[pri:1, instance:DeckBuildTest.TestDeckBuild@56c4278e]">test_1_Navegacion</td> 
+  <td>main@1997702454</td>   <td></td> </tr>
+<tr bgcolor="b6ffe0">  <td>22/01/11 20:12:57</td>   <td>32055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestDeckBuild.test_2_Construccion()[pri:2, instance:DeckBuildTest.TestDeckBuild@56c4278e]">test_2_Construccion</td> 
+  <td>main@1997702454</td>   <td></td> </tr>
 </table>
